--- a/css/auction-website.css
+++ b/css/auction-website.css
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-image: url(https://live.staticflickr.com/65535/53286230059_fa7b7f5085_z.jpg); /* Replace 'your-image.jpg' with your image file path */
+            background-image: url(background.jpg); /* Replace 'your-image.jpg' with your image file path */
             background-size: cover;
             background-attachment: fixed; /* This keeps the background fixed when scrolling */
             background-color: #F7DBCD; /* Fallback background color */
